feature: Integrated hateoas with rest api