@@ -7,6 +7,7 @@ import com.easy.base.model.enums.FieldTypes;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 
 @Component
@@ -15,16 +16,15 @@ public class DefaultCollectionsBuilder{
     private final Map<String, Function<Workspace, FlexiTable>> collectionCreators;
 
     public DefaultCollectionsBuilder() {
-        collectionCreators = new HashMap<>();
-        collectionCreators.put("Users", this::_createUsersCollection);
+        collectionCreators = new ConcurrentHashMap<>();
+        collectionCreators.put("Users", this :: _createUsersCollection);
     }
 
     public List<FlexiTable> createDefaultCollections(Workspace workspace) {
         List<FlexiTable> defaultCollections = new ArrayList<>();
 
-        for (String tableName : collectionCreators.keySet()) {
-            FlexiTable table = _createDefaultCollection(tableName, workspace);
-
+        for (Map.Entry<String, Function<Workspace, FlexiTable>> entry : collectionCreators.entrySet()) {
+            FlexiTable table = entry.getValue().apply(workspace);
             if (table != null) {
                 defaultCollections.add(table);
             }
@@ -33,21 +33,13 @@ public class DefaultCollectionsBuilder{
         return defaultCollections;
     }
 
-    public FlexiTable _createDefaultCollection(String tableName, Workspace workspace) {
-        Function<Workspace, FlexiTable> creator = collectionCreators.get(tableName);
-        if (creator == null) return null;
-
-        return creator.apply(workspace);
-    }
-
     private FlexiTable _createUsersCollection(Workspace workspace) {
-
         return FlexiTable.builder()
                 .name("Users")
                 .workspaceId(workspace.getId())
                 .description("Default Users Table")
                 .flexiName(workspace.getId() + "_Users")
-                .fields(Arrays.asList(
+                .fields(List.of(
                         new FlexiTableField("username", FieldTypes.TEXT, true, true, null),
                         new FlexiTableField("email", FieldTypes.TEXT, true, true, null),
                         new FlexiTableField("role", FieldTypes.TEXT, true, false, null),
@@ -57,5 +49,4 @@ public class DefaultCollectionsBuilder{
                 ))
                 .build();
     }
-
 }
